# c_extra

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  ROADMAP.md  SPEC_TEMPLATE.md  TODO.txt  arguments_parse.cpp  arguments_parse.hpp  c_extra.cpp  cextra_ast_consumer.cpp  cextra_ast_consumer.hpp  cextra_frontend.cpp  cextra_frontend.hpp  common.hpp  common_ast_handlers.hpp  iterate_arguments.cpp  iterate_arguments.hpp  iterate_arguments.md  iterate_enum.cpp  iterate_enum.hpp  iterate_enum.md  iterate_struct.cpp  iterate_struct.hpp  iterate_struct_union.cpp  iterate_struct_union.hpp  iterate_struct_union.md  log.hpp  main.cpp  rewrition_frontend.cpp  rewrition_frontend.hpp  trace.hpp
